# Nexus

./: .env.example  .gitignore  Makefile  README.md  STRUCTURE.md  deploy.sh  docker-compose.override.example.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_add_infra_models.py  003_drift_links_reports_health.py  004_proxmox_explorer_cloud_ops.py  005_certs_redfish_changes_connectivity_scripts.py  006_script_library_ops_requests.py  007_ops_request_send_error.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/: deps.py
apps/api/src/api/auth/: __init__.py  ldap.py  oidc.py  routes.py
apps/api/src/api/v1/: __init__.py  (+31 more)
apps/api/src/config/: settings.py
apps/api/src/connectors/: __init__.py  ad.py  base.py  netbox.py  proxmox.py  registry.py  vsphere.py  vyos.py
apps/api/src/core/: __init__.py  audit.py  audit_middleware.py  cache.py  connector_credentials.py  cors_util.py  encryption.py  limiter.py  rbac.py  security.py  smtp_send.py
apps/api/src/db/: __init__.py  seed.py  session.py
apps/api/src/models/: __init__.py  audit_log.py  backup_status.py  change_event.py  cluster.py  connectivity_result.py  connector.py  datastore.py  drift_finding.py  haproxy_config.py  health_check.py  host.py  idrac_inventory.py  link_template.py  ops_request.py  proxmox_entity.py  proxmox_finding.py  proxmox_snapshot.py  proxmox_task.py  rack.py  recent_object.py  report.py  role.py  runbook.py  saved_query.py  script_definition.py  script_execution.py  site.py  snapshot_acknowledgement.py  storage_volume.py  sync_job.py  tls_certificate.py  useful_link.py  user.py  user_favourite.py  virtual_machine.py
apps/api/src/schemas/: cluster.py  connector.py  host.py  rack.py  role.py  site.py  sync_job.py  user.py  virtual_machine.py
apps/api/src/services/: __init__.py  connectivity.py  drift_service.py  proxmox_findings_service.py  tls_scan.py
apps/api/src/tasks/: __init__.py  celery_app.py  sync_tasks.py
apps/api/tests/: __init__.py  test_health.py  test_security_and_auth.py
(+98 files in other folders)
