[project]
name = "cloud-nexus-api"
version = "0.1.0"
description = "Cloud Nexus API - central control plane for cloud/datacentre operations"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0,<1.0",
    "uvicorn[standard]>=0.27.0",
    "slowapi>=0.1.9",
    "authlib>=1.3.0",
    "ldap3>=2.9",
    "paramiko>=3.4.0",
    "pyvmomi>=8.0.0",
    "sqlalchemy>=2.0.0,<3.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "celery[redis]>=5.3.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120

[tool.ruff.lint]
# Keep CI green; tighten rules incrementally.
ignore = ["E501"]

# SQLAlchemy relationship forward refs use quoted class names
[tool.ruff.lint.per-file-ignores]
"**/models/*.py" = ["F821"]
